# csearch

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CompileProtos.sh  README.md  stopwords.json
.github/workflows/: cmake.yml
cmake/: clang-tidy.cmake  find-catch2.cmake  find-cppcoro.cmake  find-fmt.cmake  find-json.cmake  find-plog.cmake  find-pqxx.cmake  find-yamlcpp.cmake
include/: App.h  AppState.h  DataIDs.h  DataRow.h  DbConnection.h  Index.h  IndexStorage.h  Indexer.h  State.h  TextToWords.h  Vocabulary.h  WordValidator.h
include/csearch/: Test.h
include/http/: GrpcServer.h  GrpcServiceImpl.h  IndeStorageServiceImpl.h  IndexStorageServiceImpl.h  SearchIndexHandler.h  SearchRequestHandler.h  SearchServiceImpl.h  StreamSuggestHandler.h
include/sources/: PostgresSource.h
include/utils/: Generator.h  TextToWords.h
protos/: AnezkaSearch.proto  IndexStorage.proto  hello.proto
src/: App.cpp  AppState.cpp  DataRow.cpp  Index.cpp  IndexStorage.cpp  Indexer.cpp  State.cpp  TextToWords.cpp  Vocabulary.cpp  WordValidator.cpp  main.cpp
src/csearch/: Test.cpp
src/http/: GrpcServer.cpp  GrpcServiceImpl.cpp  IndeStorageServiceImpl.cpp  SearchIndexHandler.cpp  SearchRequestHandler.cpp  SearchServiceImpl.cpp  StreamSuggestHandler.cpp
src/sources/: PostgresSource.cpp
src/utils/: Generator.cpp  TextToWords.cpp
test/: CMakeLists.txt  bencIndexStorage.cpp  testAppState_and_ConfigParser.cpp  testIndexStorage.cpp  testIndexer.cpp  testTextToWords.cpp  test_config.yaml  testmain.cpp  tests.h
test/benchmarks/: CMakeLists.txt  bench_Indexer.cpp
test/units/: CMakeLists.txt  bencIndexStorage.cpp  testAppState_and_ConfigParser.cpp  test_AppState_and_ConfigParser.cpp  test_Cyrillic.cpp  test_IndexStorage.cpp  test_Indexer.cpp  test_PrefixTree.cpp  test_TextToWords.cpp  test_Vocabulary.cpp  test_WordValidator.cpp  test_config.yaml  testmain.cpp  testmain.h  words.txt
test/web/: k6_test.js
